修复民法典地址，添加幸运数字

--- a/content/docs/1.md
+++ b/content/docs/1.md
@@ -23,7 +23,7 @@ weight: 1
 ## 习性
 
 - 栖息地：杭州外国语学校 (HFLS)，小和山
-    - 学号：0101237035256，8
+    - 学号：0101237035256，8（幸运数字）
 - 起源：小和山大猩猩变异
 - 主要食物：烂香蕉 (rotten banana)，小米，大脑切片
 - 喜好：给别人起**侮辱性**外号[^1]，吃小米和大脑切片[^2]
@@ -33,6 +33,6 @@ weight: 1
 - 暗恋：王圣茹，施圣垚（其实是**猎物** ~~，总是被“现场宰杀”~~）
 - 害怕：何嘉颖
 
-[^1]: 注意！古猿的行为是**民事违法行为**，请勿模仿！违反了[民法典](/中华人民共和国民法典.docx)第一千零二十五条：“行为人为公共利益实施新闻报道、舆论监督等行为，影响他人名誉的，不承担民事责任，但是有下列情形之一的除外：（一）捏造、歪曲事实；（二）对他人提供的严重失实内容未尽到合理核实义务；**（三）使用侮辱性言辞等贬损他人名誉。**”
+[^1]: 注意！古猿的行为是**民事违法行为**，请勿模仿！违反了[民法典](https://flk.npc.gov.cn/detail2.html?ZmY4MDgwODE3MjlkMWVmZTAxNzI5ZDUwYjVjNTAwYmY%3D)第一千零二十五条：“行为人为公共利益实施新闻报道、舆论监督等行为，影响他人名誉的，不承担民事责任，但是有下列情形之一的除外：（一）捏造、歪曲事实；（二）对他人提供的严重失实内容未尽到合理核实义务；**（三）使用侮辱性言辞等贬损他人名誉。**”
 
 [^2]: 两个典故来自科学课（压强、神经系统）时古猿说的奇怪的话
