--- a/content/docs/2.md
+++ b/content/docs/2.md
@@ -26,4 +26,4 @@ weight: 2
 |41|杨子昔|扬子鳄|
 
 [^1]: 再次提醒！古猿的行为是**民事违法行为**，请勿模仿！
-[^2]: 姓名摘自 http://www.chinahw.net/web/index.php/index/popshow/moid/19/tiid/18150/soid/0 。
+[^2]: 姓名摘自 <http://www.chinahw.net/web/index.php/index/popshow/moid/19/tiid/18150/soid/0> 。
