--- a/content/docs/1.md
+++ b/content/docs/1.md
@@ -11,8 +11,9 @@ weight: 1
 # 基本信息
 
 ## 照片
-- 学农 ![](/docs/img/1.png)
-- 微信 ![](/docs/img/2.jpg)
+
+- ![学农](/docs/img/1.png)
+- ![微信](/docs/img/2.jpg)
 
 ## 名称
 
@@ -23,7 +24,7 @@ weight: 1
 ## 习性
 
 - 栖息地：杭州外国语学校 (HFLS)，小和山
-    - 学号：0101237035256，8（幸运数字）
+  - 学号：0101237035256，8（幸运数字）
 - 起源：小和山大猩猩变异
 - 主要食物：烂香蕉 (rotten banana)，小米，大脑切片
 - 喜好：给别人起**侮辱性**外号[^1]，吃小米和大脑切片[^2]
